<resources>
    <string name="app_name">QuoteDay</string>
    <string name="author">Robert Kiyosaki</string>
    <string name="quote">Learn to use your emotions to think, not think with your emotions.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_quote">share quote</string>
    <string name="favorite_quote">favorite quote</string>
    <string name="delete_quote">delete quote</string>
    <string name="save_settings_button">Save Settings</string>
    <string name="daily_notifications">Daily notifications</string>
    <string name="oops">Oops!</string>
    <string name="your_internet_">Please check your internet settings and try again!</string>
    <string name="try_again">Try again</string>
    <string name="notification_scheduled">Notification Scheduled</string>
    <string name="okay">Okay</string>
    <string name="main">Main</string>
    <string name="favorite">Favorite</string>
    <string name="quotes">Quotes</string>
    <string name="settings">Settings</string>
    <string name="notification_channel">Notification Channel</string>
    <string name="description_channel">A Description of the Channel</string>
    <string name="notification_disabled">Notifications disabled</string>
    <string name="message">\nMessage: Daily notifications </string>
    <string name="scheduled">scheduled at: </string>
    <string name="text_plain">text/plain</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>