<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_internet_error" />
        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_6"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/oops"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_30" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_8"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/your_internet_"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18" />
        <Button
            android:id="@+id/button_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/try_again" />

    </LinearLayout>

</FrameLayout>